--- a/Eschborn.html
+++ b/Eschborn.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simons Eschborn Webseite</title>
-<link href="style.css" rel="stylesheet">
-
-
-    
+<link href="styleEschborn.css" rel="stylesheet">
+ 
 </head>
-<body><div>
+<body>
     <u><center><h1>Meine Stadt Eschborn</h1></center></u> <br> 
-    <img id="Bild1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/FRAEsch.jpg/1200px-FRAEsch.jpg"width=500px height="300px" align="right">
-    <img src="./Eschborn2.png"width=400px height=400px align="left">
+    <img id="Bild1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/FRAEsch.jpg/1200px-FRAEsch.jpg" width=500px height=300px style="border-bottom: 100px solid lightblue; border-left: 8px solid lightblue" align="right">
+    <img src="./Eschborn2.png"width=400px height=400px  style="border-right: 8px solid lightblue" align="left">
+<div>
 <center>Herzlich willkommen bei der Stadt Eschborn! <br>
     Die offizielle Webseite mit Informationen rund um das Leben in Eschborn für Einheimische, Neubürger, Gäste und Gewerbetreibende.<br><br>
    <span class="ueberschrift">Aktuelle Themen</span><br>
-    Veranstaltungen : Konzerte, Theater, Lesungen - Alle Events im <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Veranstaltungskalender</a> 
-    Infos zur Buntestagswahl 2025: Voraussichtlicher Wahltermine am 23. Februar 2025. In Kürze erfahren Sie hier mehr. Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
-    ist dabei im Planfeststellungsabschnitt Nord. Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht. <br> <span class="ueberschrift">Konatkt</span><br>
- </a></center>
- Habt ihr auf unserer website nicht das gefunden, wonach ihr geschaut habt? Kein problem - sprecht <br> uns an und wir geben weiter Hinweise! Lasst uns wissen,  welche Services fehlen, welche verbessert <br> werden 
- können 
- und was neu gestalten werden kann! Stadt Eschborn Tel. 016196 - 410 999 <br> <a href= "mailto:kontakt@eschborn.de">kontakt@eschborn.de</a> <br>
+    Veranstaltungen:<br>Konzerte, Theater, Lesungen - Alle Events im <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Veranstaltungskalender</a><br>
+    Infos zur Buntestagswahl 2025:<br>Voraussichtlicher Wahltermine am 23. Februar 2025. In Kürze erfahren Sie hier mehr.<br>Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
+    ist dabei im Planfeststellungsabschnitt Nord.<br>Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht.<br><br>
+    <hr>
+    <span class="ueberschrift">Kontakt</span><br>
+    Habt ihr auf unserer Website nicht das gefunden, wonach ihr geschaut habt? Kein Problem - sprecht<br>uns an und wir geben weitere Hinweise! Lasst uns wissen,  welche Services fehlen, welche verbessert<br>werden 
+    können und was neu gestalten werden kann! Stadt Eschborn Tel. 016196 - 410 999<br><a href= "mailto:kontakt@eschborn.de">kontakt@eschborn.de</a><br> 
+</center>
 </div>
+
     <hr>
    <center> <a href="Stadtportrait.html">
     <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Stadtportrait </button></a>
@@ -36,7 +37,7 @@
     <a href="Wirtschaft.html">
     <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Wirtschaft</button></a></center>
     <hr>
-    <center><span class="ueberschrift">Meine Quellen </span><br></center>
+    <center><span class="ueberschrift">Quellen</span><br></center>
     <center><a href="https://de.wikipedia.org/wiki/Regionaltangente_West">https://de.wikipedia.org/wiki/Regionaltangente_West</a> <br>
      <a href="https://de.wikipedia.org/wiki/Eschborn">https://de.wikipedia.org/wiki/Eschborn</a> <br>
      <a href="https://www.giessen.de/">https://www.giessen.de/ </a><br>
