--- a/Rathaus.html
+++ b/Rathaus.html
@@ -8,35 +8,35 @@
 </head>
 <body>
     <body><u><center><h1>Rathaus</h1></center></u> <br>  
-    <img src="./Rathaus.jpeg"width=450px height="250px" align="right">
+    <img src="./Rathaus.jpeg"width=450px height="250px" style="border-left: 8px solid lightblue" align="right">
     <span class ="ueberschrift0">Wissenswertes zur Verwaltung & Politik</span> <br><br>
   <span class ="ueberschrift1">Auf einen Blick - Wichtige Kontakte</span> <br>
-  Rathaus Rathausplatz 3665760 Eschborn Telefon: 06196/490-0Mail: <a href= "mailto: info@eschborn.de">info@eschborn.de</a> + I3 Empfang: Montag, Dienstag, Donnerstag 8 - 16 Uhr und Mittwoch 8 - 18 Uhr, Freitag 8 - 12 Uhr Dienstleistungszentrum 
-  (Bauhof) Graf-Zeppelin-Straße 5-765760 Eschborn Telefon: 06196 - 490-501 Mail: <a href= "mailto: bauen@eschborn.de">bauen@eschborn.de</a> Öffnungszeiten: Montag-Freitag 08.00 - 12.00 Uhr, Mittwoch 15.00 - 16.30 Uhr Annahme Grünabfälle: Montag,
-   Dienstag und Donnerstag 7:30-15:30, Mittwoch 7:30-17:30 und Freitag 7:30-12:00 <a href="https://eschborn.mein-abfallkalender.online">Abfallkalender</a> Standesamt E-Mail: 
+  Rathaus<br>Rathausplatz 3665760 Eschborn Telefon: 06196/490-0 Mail: <a href= "mailto: info@eschborn.de">info@eschborn.de</a> + I3 Empfang: Montag, Dienstag, Donnerstag 8 - 16 Uhr und Mittwoch 8 - 18 Uhr, Freitag 8 - 12 Uhr<br>Dienstleistungszentrum 
+  (Bauhof) Graf-Zeppelin-Straße 5-765760 Eschborn Telefon: 06196 - 490-501 Mail: <a href= "mailto: bauen@eschborn.de">bauen@eschborn.de</a> Öffnungszeiten: Montag-Freitag 08.00 - 12.00 Uhr, Mittwoch 15.00 - 16.30 Uhr<br>Annahme Grünabfälle: Montag,
+   Dienstag und Donnerstag 7:30-15:30, Mittwoch 7:30-17:30 und Freitag 7:30-12:00 <a href="https://eschborn.mein-abfallkalender.online">Abfallkalender</a><br>Standesamt E-Mail: 
    <a href= "mailto: standesamt@eschborn.de">standesamt@eschborn.de</a> Telefon: 06196/490-205. <br><br>
    <span class ="ueberschrift1">Bürgerservice</span><br>
-   Bürgerbüro (Services zum Einwohnermeldewesens) Unterortstraße 27A E-Mail: <a href= "mailto: buergerbuero@eschborn.de">buergerbuero@eschborn.de</a>Telefon: 06196/490-999 Öffnungszeiten BürgerbüroMontag: 8-12 Uhr und 13-16 Uhr Dienstag: 8-12 Uhr Mittwoch: 8-12 Uhr 
-   und 14-18 Uhr Donnerstag: 8-12 Uhr Freitag: 8-12 Uhr Jeden 1. Samstag im Monat: 9-13 Uhr Öffnungszeiten Verwaltungsstelle NiederhöchstadtDienstag: 8 bis 13 Uhr Donnerstag: 10 bis 15 Uhr Öffnungszeiten 
-   Verwaltungsstelle Niederhöchstadt: Dienstag 8 - 13 Uhr und Donnerstag 10 - 15 Uhr Dienstleistungen & Services der Stadt/Behörden sind über den A-Z Katalog zu finden: Hier klicken bitte! Zuständigkeiten der
-    Fachdienste Servicekatalog A bis Z
+   Bürgerbüro (Services zum Einwohnermeldewesen)<br>Unterortstraße 27A E-Mail: <a href= "mailto: buergerbuero@eschborn.de">buergerbuero@eschborn.de</a> Telefon: 06196/490-999<br>Öffnungszeiten Bürgerbüro Montag: 
+   8-12 Uhr und 13-16 Uhr Dienstag: 8-12 Uhr Mittwoch: 8-12 Uhr und 14-18 Uhr Donnerstag: 8-12 Uhr Freitag: 8-12 Uhr Jeden 1. Samstag im Monat: 9-13 Uhr<br>Öffnungszeiten Verwaltungsstelle Niederhöchstadt Dienstag:
+   8 bis 13 Uhr Donnerstag: 10 bis 15 Uhr<br>Dienstleistungen & Services der Stadt/Behörden sind über den A-Z Katalog zu
+   finden: Hier klicken bitte!<br>Zuständigkeiten der Fachdienste Servicekatalog A bis Z
     <hr>
-    <img src="./Rathaus2.jpg"width=450px height="250px" align="left">
+    <img src="./Rathaus2.jpg"width=450px height="250px" style="border-right: 8px solid lightblue" align="left">
     <span class ="ueberschrift1">Politik & Gremien</span> <br>
     Magistrat ist die laufende Verwaltung der Stadt und hat folgende Mitglieder: Karlheinz Gritsch (CDU), Stadtrat (Dezernat III - Brandschutz) Helmut Bauch (FWE), Stadtrat (Dezernat IV - Seniorenarbeit) 
     Markus Depping (CDU), Stadträtin Dr. Annette Christoph (FDP), Stadtrat Adolf Kannengießer (SPD), Stadträtin Monika Reckhard (Grüne), Stadträtin Jutta Rümann-Heller (CDU), Stadtrat Dr. Willi Schnorpfeil (Grüne), 
-    Stadtrat Wolfram Schuster (CDU), Stadträtin Susanne Sievers (Die Linke), Stadtrat Thomas Spriegel (FDP), Stadtrat Bernd Wilhelm (SPD), Stadtrat. Die Stadtverordnetenversammlung ist das oberste Organ der Gemeinde
+    Stadtrat Wolfram Schuster (CDU), Stadträtin Susanne Sievers (Die Linke), Stadtrat Thomas Spriegel (FDP), Stadtrat Bernd Wilhelm (SPD), Stadtrat.<br><br>Die Stadtverordnetenversammlung ist das oberste Organ der Gemeinde
     und wird alle fünf Jahre von den Bürgern gewählt. CDU: M. von Sternheim (Stadtverordnetenvorsteher); M. Agosta, S. Brekner, M. Stewin, S. Fritsch, K. Geiger, C. Oberlis (Fraktionsvorsitzender), J. Oberlis,
     L. Petermann, P. Pritz-Bode, F. Schneider, FDP: C. Ackermann (Fraktionsvorsitzender), R. Engler, A. Geiger, M. Geiger, N. Groß, T. Henrich, C. Scherer, Bündnis 90/Die Grünen: J. Blomberg, 
     U. Ebert (Fraktionsvorsitzende), S. Henschel, Stefan (Fraktionsvorsitzender), C. Hillen, S. Mosbach, S. Niklas, F. Eckert SPD: Dr. S. Blum-Geenen, R. Birkert, S. Kutscher, U. Richter, E. Sauter, B. Veeck,
-    Bernhard (Fraktionsvorsitzender) FWW: L. Becking, A. Boulaich, M. Ishak, R. Seidel, Regine (Fraktionsvorsitzende) DIE LINKE: F. Hornung, (Fraktionsvorsitzender), R. Zenk. Ausländerbeirat vertritt die 
+    Bernhard (Fraktionsvorsitzender) FWW: L. Becking, A. Boulaich, M. Ishak, R. Seidel, Regine (Fraktionsvorsitzende) DIE LINKE: F. Hornung, (Fraktionsvorsitzender), R. Zenk.<br><br>Ausländerbeirat vertritt die 
     Interessen der ausländischen Einwohner gegenüber den städtischen Gremien und hat umgekehrt die besondere Aufgabe, die Organe der Gemeinde in allen Angelegenheiten, die ausländische Einwohner betreffen,
-    zu beraten. Mitglieder: Massimiliano Agosta (Vorsitzender), Jozef Burda (stellvertretender Vorsitzender), Nandini Narayan, Maricela Mejia Buezo, Sayed Djawid Athar (ehem. Mitglied), Marian Torba. In Eschborn
+    zu beraten. Mitglieder: Massimiliano Agosta (Vorsitzender), Jozef Burda (stellvertretender Vorsitzender), Nandini Narayan, Maricela Mejia Buezo, Sayed Djawid Athar (ehem. Mitglied), Marian Torba.<br><br>In Eschborn
     gibt es 2 Kinderbeiräte (für Eschborn bzw. Niederhöchstadt). Die Mitglieder werden von den örtlichen Schulen benannt und besuchen dort in der Regel die Klassen 3 bis 6. Weitere Infos auf der Seite des
     Kinderbeirates. Der Jugendbeirat hat 18 Mitglieder, die von der Heinrich-von-Kleist-Schule, dem Ausländerbeirat, dem Jugendzentrum, dem Café Perplex und den Kirchen-gemeinden benannt werden. Mehr Infos findet
     ihr unter <a href="http://www.jugendbeirat-eschborn.de">www.jugendbeirat-eschborn.de</a> <br><br>
     <span class ="ueberschrift1">Karriere</span> <br>
-    Zu den Stellenausschreibungen <a href="https://www.eschborn.de/rathaus/verwaltung/stellenausschreibungen"> bitte hier klicken</a>
+    Zu den Stellenausschreibungen <a href="https://www.eschborn.de/rathaus/verwaltung/stellenausschreibungen">bitte hier klicken</a><br>
     Zu den Ausbildungsmöglichkeiten bei der Stadt <a href=" https://www.eschborn.de/rathaus/verwaltung/stellenausschreibungen/ausbildung">bitte hier klicken</a> 
     
     
