--- a/Stadtportrait.html
+++ b/Stadtportrait.html
@@ -7,7 +7,7 @@
     <link href="styleStadtportrait.css" rel="stylesheet">
 </head>
 <body><u><center><h1>Stadtportrait</h1></center></u> <br> 
-    <img src="karteEschborn.jpeg" height="400px" width="400px"align="right">
+    <img src="karteEschborn.jpeg" height="400px" width="400px" style="border-left: 8px solid lightblue" align="right">
   <span class ="ueberschrift0">Eschborn - Eine Stadt am Puls der Zeit</span> <br><br><br>
   </span> 
  <table border="1">
@@ -19,18 +19,18 @@
         </span>
         </tr>
         <tr>
-            <th>Eschborn ist eine Stadt im Rhein-Main-Gebiet. <br> Die Entfernung zu der Großstadt Frankfurt beträgt 7 km <br> und bis zum Flughafen sind es 14 km . Eschborn ist Teil <br>des östlichen Main-Taunus-Kreises
+            <th>Eschborn ist eine Stadt im Rhein-Main-Gebiet. <br> Die Entfernung zu der Großstadt Frankfurt beträgt 7 km <br> und bis zum Flughafen sind es 14 km. Eschborn ist Teil <br>des östlichen Main-Taunus-Kreises
                  und grenzt an <br> Kronberg, Steinbach, Schwalbach und Frankfurt.</th>
             <th>Eschborn hat zwei Stadtteile: <br> Eschborn und Niederhöchstadt (seit 1971). <br> Beide Stadteile haben eine kleine Altstadt und <br>die Daseinsgrundfunktionen (Versorgung) werden in beiden<br>
-                Teilen gewahrt</th>
-            <th>Einwohner: 22.500 Fläche: 12, 14 km2 <br>Bevölkerungsdichte: 1859 Einwohner/km2 <br>Bundesland: Hessen Landkreis:<br> Main-Taunus-Kreis Regierungspräsidium:<br> Darmstadt Postleitzahl: 65760 <br>
-                Vorwahlen: 06196 (Eschborn) und 06173 (Niederhöchstadt)</th>
+                Teilen gewahrt.</th>
+            <th>Einwohner: 22.500<br>Fläche: 12,14 &#x33A2;<br>Bevölkerungsdichte: 1859 Einwohner/&#x33A2; <br>Bundesland: Hessen <br>Landkreis: Main-Taunus-Kreis<br>Regierungspräsidium: Darmstadt<br>Postleitzahl: 65760
+                <br>Vorwahlen: 06196 (Eschborn) und 06173 (Niederhöchstadt)</th>
             <th>Eschborn ist über das ÖPNV mit<br> Frankfurt und umliegende Gemeinden<br> angebunden. Es gibt 3 S-Bahnhöfe Eschborn Süd,<br> Eschborn Bahnhof und Eschborn-Niederhöchstadt<br> (S3 und S4 im 15-Minuten-Takt)
                  sowie mehrere <br>Buslinien,
                  die das Stadtgebiet erschließen und <br>Verbindungen zu den Nachbarkommunen<br> herstellen. Die S-Bahn fährt (einmaliges Umsteigen) <br>zum Flughafen sowie auch die Buslinie 58.<br> Mit dem Fahrrad kann man 
                  über Fahrradwege<br> aus 
                  unterschiedlichen Gegenden Frankfurts und den Nachbargemeinden nach Eschborn fahren. Autos können über viele Autobahnen unmittelbar nach Eschborn fahren: A 648, A66 und A5. Eschborn verfügt über drei Park &
-                  Ride-Anlagen an den jeweiligen</th>
+                  Ride-Anlagen an den jeweiligen Bahnhöfen, wo kostenloses Parken zur Verfügung steht.</th>
         </tr>
     </table>
 </body>
