--- a/Wirtschaft.html
+++ b/Wirtschaft.html
@@ -8,19 +8,23 @@
 </head>
 <body>
     <u><center><h1>Wirtschaft</h1></center></u> <br> 
-    <span class ="ueberschrift0">Eschborn - auch ein heruasragendes wirtschaftliches Umfeld</span> <br><br>
-    <img src="./Wirtschaft1.jpg"width=400px height=250px align="left">
+    <span class ="ueberschrift0">Eschborn - auch ein herausragendes wirtschaftliches Umfeld</span> <br><br>
+    <img src="./Wirtschaft1.jpg"width=400px height=250px style="border-right: 8px solid lightblue" align="left">
     <span class ="ueberschrift1">Wirtschaftsstandort</span> <br>
-    Eschborn liegt zentral gelegen (nur 7 km von frankfurt entfernt) und ist verkehrsgünstig gelegen (direkte S-Bahn-Anschlüse und direkt an der Autobahn gelegen). Diese Vorteile ombiniert mit der Lage in der 
-    wachstumsstarken Metropolregion Frankfurt Rhein Main machen Eschborn für Unternehmen attraktiv. Eschborn bietet ein attraktives Umfeld für die Unternehmen. Grund hierfür ist nicht nur die moderne Infrastruktur
-    und die unternehmensfreundliche Steuerpolitik, sondern auch die Wirtschaftsstärke, Innovation, Branchenvielfalt und Internationalität. Zahlen & Fakten Ca. 4.500 Unternehmen (lokale Kleinbetriebe, Mittelstand und
-    Weltkonzerne) sind in Eschborn vertreten. Folgende Branchen sind in Eschborn aktiv: Finanzen, IT & Telekommunikation, Chemie & Pharma und Consulting. Zu den bekannten Unternehmen vor Ort gehören die Deutsche
-    Börse, Ernst & Young, SAP, Samsung, GIZ und BAFA.In Eschborn arbeiten über 40.000 Menschen. Weitere Details Gewerbesteuerhebesatz: 330% Grundsteuer B Hebesatz: 140 %Kaufkraftindex: 130,3% 
-    Einzelhandelszentralität: 177,1 (2021). <br> <br>
+    Eschborn liegt zentral gelegen (nur 7 km von Frankfurt entfernt) und ist verkehrsgünstig gelegen (direkte S-Bahn-Anschlüse und direkt an der Autobahn gelegen). Diese Vorteile kombiniert mit der Lage in der 
+    wachstumsstarken Metropolregion Frankfurt Rhein-Main machen Eschborn für Unternehmen attraktiv.<br>
+    Eschborn bietet ein attraktives Umfeld für die Unternehmen. Grund hierfür ist nicht nur die moderne Infrastruktur
+    und die unternehmensfreundliche Steuerpolitik, sondern auch die Wirtschaftsstärke, Innovation, Branchenvielfalt und Internationalität.<br><br>Zahlen & Fakten<br>Ca. 4.500 Unternehmen (lokale Kleinbetriebe, 
+    Mittelstand und Weltkonzerne) sind in Eschborn vertreten.<br>Folgende Branchen sind in Eschborn aktiv: Finanzen, IT & Telekommunikation, Chemie & Pharma und Consulting.<br>Zu den bekannten Unternehmen vor Ort
+    gehören die Deutsche Börse, Ernst & Young, SAP, Samsung, GIZ und BAFA.In Eschborn arbeiten über 40.000 Menschen.<br>Weitere Details:<br>Gewerbesteuerhebesatz: 330%<br>Grundsteuer B<br>Hebesatz: 140%<br>
+    Kaufkraftindex: 130,3%<br>Einzelhandelszentralität: 177,1 (2021)<br> <br>
     <span class ="ueberschrift1">Wirtschaftsförderung</span> <br>
-    Die Wirtschaftsförderung hat das Ziel, Eschborn wettbewerbsfähiger zu machen und neue Arbeitsplätze zu schaffen. Gleichzeitig sollen Bestandsunternehmen und neue Unternehmen unterstützt werden.
-    Benötigst du Informationen wie du dein Unternehmen gründen bzw. weiterentwickeln sollst oder denkst du nach, dein Unternehmen in Eschborn anzusiedeln? Dann bist du hier richtig, denn die wir als 
-    Wirtschaftsförderung sind die zentrale Kontaktstelle für die deine benötigten Informationen. Wir geben Tipps in wichtigen Belangen (Genehmigungsverfahren im baulichen/aufenthaltsrechtlichen Bereich, 
-    Suche nach Fach- und Arbeitskräften oder Suche nach geeigneten Kooperationspartnern). Kontaktiere uns unter Tel. 06196 490 333 <a href= "Wirtschaftsfoerderungeschborn.de">Wirtschaftsfoerderungeschborn.de</a>
+    Die Wirtschaftsförderung hat das Ziel, Eschborn wettbewerbsfähiger zu machen und neue Arbeitsplätze zu schaffen. Gleichzeitig sollen Bestandsunternehmen und neue Unternehmen unterstützt werden.<br>
+    Benötigst du Informationen wie du dein Unternehmen gründen bzw. weiterentwickeln sollst oder denkst du nach, dein Unternehmen in Eschborn anzusiedeln?<br>
+    Dann bist du hier richtig, denn die wir als 
+    Wirtschaftsförderung sind die zentrale Kontaktstelle für die deine benötigten Informationen.<br>
+    Wir geben Tipps in wichtigen Belangen (Genehmigungsverfahren im baulichen/aufenthaltsrechtlichen Bereich, 
+    Suche nach Fach- und Arbeitskräften oder Suche nach geeigneten Kooperationspartnern).<br>
+    Kontaktiere uns unter Tel. 06196 490 333 <a href= "Wirtschaftsfoerderungeschborn.de">Wirtschaftsfoerderungeschborn.de</a>
 </body>
 </html>
