--- a/Erleben.html
+++ b/Erleben.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simons Eschborn Erleben</title>
-    <link href="erlebenStyle.css" rel="stylesheet">
+    <link href="styleErleben.css" rel="stylesheet">
 </head>
 <body>
     <body><u><center><h1>Erleben</h1></center></u> <br>
     <span class ="ueberschrift0">Freizeit in Eschborn genießen!</span> <br><br>
-    <img src="./Erleben1.png"width=300px height=300px align="left">
+    <img src="./Erleben1.png"width=300px height=300px style="border-right: 8px solid lightblue" align="left">
     <span class ="ueberschrift1">Veranstaltungen</span> <br>
     Echborn bietet Veranstltungen rund um das gesamte Jahr an. Die genauen Daten sind im Veranstlatungkalender enthalten
     <a href= "https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender"> Link zum Veranstlatungskalender</a> <br><br>
     <span class ="ueberschrift1">Sport & Freizeit</span> <br>
-    Eschborn bietet ein breiten Spektrum an Vereinen und Möglichkeiten an, in denen man Sport machen kann: <a href= "https://tv-eschborn.de/"> Turnverein Eschborn 1888 e.V.</a>
-    <a href= "https://www.tura-ndh.de"> Turn- und Rasensportverein Niederhöchstadt 1893. e. V.</a>  
-    Weitere Sportangebote sind Eschathlon (in der Regel im Juni), Radrennen Rund um Frankfurt und Eschborn
+    Eschborn bietet ein breites Spektrum an Vereinen und Möglichkeiten an, in denen man Sport machen kann:<br><a href= "https://tv-eschborn.de/">Turnverein Eschborn 1888 e.V.</a>
+    <a href= "https://www.tura-ndh.de"> Turn- und Rasensportverein Niederhöchstadt 1893. e. V.</a><br>
+    Weitere Sportangebote sind Eschathlon (in der Regel im Juni), Radrennen Rund um Frankfurt und Eschborn<br>
     Escborn verfügt über viele Parks, in denen Besucher und Bürger ihre Freizeit erleben können. So ist der Skulpturenpark hervorzuheben, eine Attraktion die weit über die Grenzen Eschborns bekannt ist. 
     Hier sind viele Skulpturen über eine sogenannte Skulpturenachse Echborn und Niederhöchstadt ausgestellt, die man besichtigen kann.
-    Für Kinder verfügt Echborn über viele kleine in den jeweiligen Gebiten verteilte Soielpltzäe. Das Highlight ist der Traktorspielplatz am Westerbach. Dieser Spielpltz verfügt über unterschiedliche Bereiche, 
-    so dass Kinder unterschiedlichen Altern, ja sogar Erwachsene etwas für sich entdecken können. Es gibt Tischtennisplatten, Ausdauer-Sportgeräte und auch eine öffentliche Toilette. Mittelpunkt ist der rote Traktor.
-    Eschborn verfügt auch in den Grünanlagen über jeweilige Grillplätze sowie eine Grillhütte, die bei der Stadt gemietet werden kann. Man kann sich über folgenden Kontakt zur anmelden: 
+    <br>Für Kinder verfügt Echborn über viele kleine in den jeweiligen Gebieten verteilte Soielplätze. Das Highlight ist der Traktorspielplatz am Westerbach. Dieser Spielpltz verfügt über unterschiedliche Bereiche, 
+    so dass Kinder unterschiedlichen Alters, ja sogar Erwachsene etwas für sich entdecken können. Es gibt Tischtennisplatten, Ausdauer-Sportgeräte und auch eine öffentliche Toilette. Mittelpunkt ist der rote Traktor.
+    <br><br>Eschborn verfügt auch in den Grünanlagen über jeweilige Grillplätze sowie eine Grillhütte, die bei der Stadt gemietet werden kann. Man kann sich über folgenden Kontakt zur anmelden: 
     <a href= "mailto: belegung@eschborn.de ">belegung@eschborn.de</a> Tel. 06196 490-234 <br><br>
     <span class ="ueberschrift1">Kultur & Attraktionen</span> <br>
-    In Eschborn gibt es viele wiederkehrende Veranstlatung auf die sich unsere Bürger und Gäste freuen. Hier einige Highlights: Summertime: Jeden Sommer findet für 2 Monate jede Woche ein kostenloses
-    Open-Air Konzert statt , das sich im Löaufe der Jahre zu einem Klassiker nicht nur für Eschborn sondern für die Umgebung auch entwicklet hat. Niederhöchstätter Markt: Alle 2 Jahre (gerade Zahlen)
-    gibt es in der Niderhöchstätter Altsadt für ein Wochende eine wundervolle Marktaltmosphäre. Eschborner Weihnachtsmarkt: Findet immer am 2. Advent statt. Niederhöchstätter Weihnachtsmarkt am Montgeronplatz:
-    Findet am 3. Advent jährlich statt. Eschenfest: In der Altstadt findet im Juni für ein Wochenende dieses Fest statt. Museum & Stadtarchiv. In Eschborn gibt es ein Museum, das auch das Stadtarchiv beheimatet. 
-    Hier kann man in die Geschichte Eschborn eintauchen. Eschenplatz 165760 EschbornTelefon: 06196/490-230 <a href= "museum@eschborn.de">museum@eschborn.de</a> Bühne & Film mit dem Eschborn verfügt Eschborn über 
-    einen Veranstlatungsort in dem Kleinkunst, Konzerte, Kino und Kabarett angeboten werden. Die laufenden Events sind hier erwähnt: <a href= "https://eschborn-k.de/"> https://eschborn-k.de/</a>
-    Einige Sehenswürdigkeiten, die Eschborn so attraktiv machen sind auch: SkulpturenparkSeit 2010 werden in Eschborn und Niederhöchstadt in einer großzügig gestalteten Parkanlage Kunstwerke stilvoll platziert. 
-    Hier finden zahlreiche kulturelle Veranstaltungen und Ausstellungen statt.Stolpersteine Auch in Eschborn befinden sich vier Stolpersteine ein Projekt, das an diejenigen Menschen erinnert, die im 
+    In Eschborn gibt es viele wiederkehrende Veranstaltungen auf die sich unsere Bürger und Gäste freuen. Hier einige Highlights:<br>Summertime: Jeden Sommer findet für 2 Monate jede Woche ein kostenloses
+    Open-Air Konzert statt , das sich im Laufe der Jahre zu einem Klassiker, nicht nur für Eschborn, sondern auch für die Umgebung entwickelt hat.<br>Niederhöchstädter Markt: Alle 2 Jahre (gerade Zahlen)
+    gibt es in der Niderhöchstädter Altsadt für ein Wochende eine wundervolle Marktaltmosphäre.<br>Eschborner Weihnachtsmarkt: Findet immer am 2. Advent statt.<br>Niederhöchstädter Weihnachtsmarkt am Montgeronplatz:
+    Findet am 3. Advent jährlich statt.<br>Eschenfest: In der Altstadt findet im Juni für ein Wochenende dieses Fest statt.<br><br>Museum & Stadtarchiv.<br>In Eschborn gibt es ein Museum, das auch das Stadtarchiv beheimatet. 
+    Hier kann man in die Geschichte Eschborn eintauchen. Eschenplatz 165760 EschbornTelefon: 06196/490-230 <a href= "museum@eschborn.de">museum@eschborn.de</a><br><br>
+    Bühne & Film<br>Mit dem Eschborn K verfügt Eschborn
+    über einen Veranstlatungsort in dem Kleinkunst, Konzerte, Kino und Kabarett angeboten werden. Die laufenden Events sind hier erwähnt: <a href= "https://eschborn-k.de/"> https://eschborn-k.de/</a>
+    <br><br>Einige Sehenswürdigkeiten, die Eschborn so attraktiv machen sind auch:<br>Skulpturenpark: Seit 2010 werden in Eschborn und Niederhöchstadt in einer großzügig gestalteten Parkanlage Kunstwerke stilvoll platziert. 
+    Hier finden zahlreiche kulturelle Veranstaltungen und Ausstellungen statt.<br>Stolpersteine Auch in Eschborn befinden sich vier Stolpersteine ein Projekt, das an diejenigen Menschen erinnert, die im 
     Nationalsozialismus verfolgt und ermordet wurden. Weitere Details <a href= "https://www.stolpersteine.eu/">hier</a><br><br>
     <span class ="ueberschrift1">Tourismus</span> <br>
-    Eschborn bietet unterschiedliche Übernachtungsmöglichkeiten an, je nacdem, ob man in familiärer Atmosphäre die Stadt und die Umgebung erkunschaften will und nah an den S-Bahn-Anschlüssen sein Gastronomie Eschborn
-    kulinarische Vielfältigkeit spiegelt sich in den Restaurants wieder. Hier eine kleine Auswahl: Italienische Küche: Mama Rosa, Lucania, A Tavola da Carmelo etc. Indisch: Crown of India Kroatisch: Westerbachhhalle, 
-    Dalmatia Deutsch: Apfelwein Müller Böhmisch: Bauernschänke Koreanisch: MoMo, Sushi Maru
-    möchte oder man beruflich, so im Gewerbe Eschborn Süd zu tun hat.
+    Eschborn bietet unterschiedliche Übernachtungsmöglichkeiten an, je nachdem, ob man in familiärer Atmosphäre die Stadt und die Umgebung erkunschaften will und nah an den S-Bahn-Anschlüssen sein möchte oder
+    man beruflich so im Gewerbegebiet Eschborn-Süd zu tun hat.<br><br>Gastronomie Eschborn kulinarische Vielfältigkeit spiegelt sich in den Restaurants wieder. Hier eine kleine Auswahl:<br>
+    Italienische Küche: Mama Rosa, Lucania, A Tavola da Carmelo etc.<br>Indisch: Crown of India<br>Kroatisch: Westerbachhhalle, 
+    Dalmatia<br>Deutsch: Apfelwein Müller<br>Böhmisch: Bauernschänke<br>Koreanisch: MoMo, Sushi Maru.
     <hr>
     <img src="./Erleben2.jpg"width=300px height=300px align="left">
 </body>
