--- a/Leben.html
+++ b/Leben.html
@@ -8,50 +8,49 @@
 </head>
 <body><u><center><h1>Leben</h1></center></u> <br>
     <span class ="ueberschrift0">Gestaltungsmöglichkeiten des Lebens in Eschborn</span> <br><br>
-    <img src="./leben1.jpg" width=500px height=250px align="right">
+    <img src="./leben1.jpg" width=500px height=250px style="border-left: 8px solid lightblue" align="right">
     <span class ="ueberschrift1">Bildung</span> <br>
-    Eschborner Kinder können einer der insgesamt 3 Grundschulen besuchen: Hartmutschule Pestalozzistraße 7-1165760 EschbornTelefon: 06196/95 40 950 Westerbachschule Georg-Büchner-Straße 1865760 
-    Eschborn  Telefon: 06173/319610 Süd-West Schule Berliner Straße 27-29 65760 Eschborn Telefon: 06196-92/75 78 60. Im weiterführenden Bereich gibt es mit der Heinrich-von-Kleist-Schule eine kooperative
-    Gesamtschule mit gymnasialer Oberstufe. Heinrich-von-Kleist-Schule Dörnweg 53 65760 Eschborn elefon: 06196/95700. Weiterbildung Die Musikschule Taunus bietet jungen Menschen sowie Erwachsenen eine große Auswahl 
-    sich musiklanish weiterzubilden Weitere Informationen und das Kursangebot gibt es unter <a href="https://www.musikschule-taunus.de/">https://www.musikschule-taunus.de</a> . Stadtbibliothek: Eschborn verfügt 
-    über insgesamt 2 Stadbüchereien, eine in Eschborn und eine in Niderhöchstadt. In beiden Büchereien können diverse Medien kostenlos ausgeliehen werden. Das kann man zu folgenden Öffnungszeiten tun: Stadtbücherei 
-    Eschborn Rathausplatz 36 65760 Eschborn Tel.: 06196 - 490 256 <a href= "mailto: stadtbuecherei@eschborn.de">stadtbuecherei@eschborn.de</a>  Öffnungszeiten: Dienstag 15-19 Uhr, Mittwoch 10-14 Uhr, Donnerstag 15-19 Uhr, Samstag 10-13 Uhr Stadtbücherei 
-    Niederhöchstadt Steinbacher Straße 23 65760 Eschborn Telefon: 06196/490-240 <a href= "mailto: stadtbuecherei-ndh@eschborn.de">stadtbuecherei-ndh@eschborn.de</a> Öffnungszeiten: Dienstag 11-13 Uhr, Mittwoch 16-19 
-    Uhr, Freitag 16-18 Uhr, Samstag 10-13 Uhr. <br><br>
+    Eschborner Kinder können eine der insgesamt 3 Grundschulen besuchen:<br>Hartmutschule Pestalozzistraße 7-1165760 Eschborn Telefon: 06196/95 40 950<br>Westerbachschule Georg-Büchner-Straße 1865760 
+    Eschborn Telefon: 06173/319610<br>Süd-West Schule Berliner Straße 27-29 65760 Eschborn Telefon: 06196-92/75 78 60.<br><br>Im weiterführenden Bereich gibt es mit der Heinrich-von-Kleist-Schule eine kooperative
+    Gesamtschule mit gymnasialer Oberstufe. Heinrich-von-Kleist-Schule Dörnweg 53 65760 Eschborn Telefon: 06196/95700.<br><br>Weiterbildung:<br>Die Musikschule Taunus bietet jungen Menschen sowie Erwachsenen eine große Auswahl 
+    sich musiklanish weiterzubilden Weitere Informationen und das Kursangebot gibt es unter <a href="https://www.musikschule-taunus.de/">https://www.musikschule-taunus.de</a>.<br><br>Stadtbibliothek:<br>Eschborn verfügt 
+    über insgesamt 2 Stadbüchereien, eine in Eschborn und eine in Niderhöchstadt. In beiden Büchereien können diverse Medien kostenlos ausgeliehen werden. Das kann man zu folgenden Öffnungszeiten tun:<br>Stadtbücherei 
+    Eschborn Rathausplatz 36 65760 Eschborn Tel.: 06196 - 490 256 <a href= "mailto: stadtbuecherei@eschborn.de">stadtbuecherei@eschborn.de</a>  Öffnungszeiten: Dienstag 15-19 Uhr, Mittwoch 10-14 Uhr, Donnerstag 15-19 Uhr, Samstag 10-13 Uhr
+    <br>Stadtbücherei Niederhöchstadt Steinbacher Straße 23 65760 Eschborn Telefon: 06196/490-240 <a href= "mailto: stadtbuecherei-ndh@eschborn.de">stadtbuecherei-ndh@eschborn.de</a> Öffnungszeiten: Dienstag 11-13 Uhr,
+    Mittwoch 16-19 Uhr, Freitag 16-18 Uhr, Samstag 10-13 Uhr. <br><br>
     <span class ="ueberschrift1">Soziales & Gesellschaft</span>  <br>
-    Kinder, Jugend & Familie Eschborn er Kinder genießen vielfältige Möglichkeiten der Kinderbetreuung. Kinderbetreuung unter 3 JahrenBitte hier klicken um bei sich den jeweiligen Anbietern 
+    Kinder, Jugend & Familie<br>Eschborner Kinder genießen vielfältige Möglichkeiten der Kinderbetreuung.<br><br>Kinderbetreuung unter 3 Jahren<br>Bitte hier klicken um bei sich den jeweiligen Anbietern 
     <a href="https://www.schuelli.care/https://zwergenburg-ev.de/http://terminal-for-kids.de/Kindertagesstätten">anzumelden</a> : (3-6 Jahren) EschbornSchulbezirk Grundschule Süd-West: Hort Berliner Straße 
-    Bismarckstraße (Kita)Bremer Straße (Kita) Süd-West (Kita) Schulbezirk Hartmutschule: Dörnweg (Altersmischung) Odenwaldstraße (Altersmischung) Ritterhof (Kita) Schulkinderhaus Hartmutschule Niederhöchstadt 
+    Bismarckstraße (Kita) Bremer Straße (Kita) Süd-West (Kita) Schulbezirk Hartmutschule: Dörnweg (Altersmischung) Odenwaldstraße (Altersmischung) Ritterhof (Kita) Schulkinderhaus Hartmutschule Niederhöchstadt 
     SchulbezirkWesterbach-Schule: Rosenweg <br> (Altersmischung) Schillerstraße (Altersmischung) Schulkinderhaus Schillerstraße Weingärten (Kita) Schulkinderhaus Westerbach Keine Schulbezirksbindung: Kindertagesstätte
-    Naturgruppe <br> im Arboretum. Frauen & LGBTQ das Gleichstellungsthema ist uns in Eschborn sehr wichtig, denn wir wollen dass die Gleichberechtigung von Frauen und Männern nicht nur in der Ver- <br> fassung steht, 
+    Naturgruppe <br> im Arboretum.<br><br>Frauen & LGBTQ Das Gleichstellungsthema ist uns in Eschborn sehr wichtig, denn wir wollen dass die Gleichberechtigung von Frauen und Männern nicht nur in der Ver- <br> fassung steht, 
     sondern auch gelebt wird. Wenn Frauen in Eschborn über ihr Lebens- und ihre Arbeits sprechen wollen und Hilfe benötigen, ist die Gleichstellungsbeauftragte das richtige Ziel. <br> BItte Frau B: Bellchambers 
-    ansprechen Telefonnummer 06196/490-189 oder <a href= "mailto: gleichstellung@eschborn.de">gleichstellung@eschborn.de</a> Senioren Aufgrund der demographischen Entwicklung in deutschland gibt es immer <br> mehr 
+    ansprechen Telefonnummer 06196/490-189 oder <a href= "mailto: gleichstellung@eschborn.de">gleichstellung@eschborn.de</a><br><br>Senioren<br>Aufgrund der demographischen Entwicklung in deutschland gibt es immer <br> mehr 
     ältere Menschen. Das Leben dieser menschen zu gestalten ist uns als Stadt sehr wichtig und daher bieten wir enstprechende Angebote an. <br> 
     <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Kulturelle Veranstaltungen für Senioren</a>
     <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/senioren/seniorenberatung"> Altenhilfekoordination und Altenplanung</a>
  <br> Eschborn möchte ein inklusives Leben ermöglichen. Unsere Ansprechpartner helfen mit Beratung und weiterführenden Hiweisen: Telefon: 06196/490-000 Email:
-    <a href= "mailto: senioren@eschborn.de">senioren@eschborn.de</a> <br>
-    Migration & Integration Integration wird als ein gesamtgesellschaftlicher Prozess verstanden, der das Zusammenleben aller Bürger in Eschborn in gegenseitigem Respekt und Wertschätzung <br> ermöglicht. Menschen, 
+    <a href= "mailto: senioren@eschborn.de">senioren@eschborn.de</a><br><br>
+    Migration & Integration Integration<br>wird als ein gesamtgesellschaftlicher Prozess verstanden, der das Zusammenleben aller Bürger in Eschborn in gegenseitigem Respekt und Wertschätzung <br> ermöglicht. Menschen, 
     die aus dem In- und Ausland nach Eschbron kommen, sollen die Möglichkeit bekommen, am Stadtleben teilzuhaben. Wir bieten daher Informationen und Dienste zu <br> folgenden Themen an Ukraine-Hilfe, 
     Flüchtiligsarbeitskreis, Ausländerbeirat, Spreachangebote und viles mehr. Für weitere Informationen klickt bitte  
     <a href="https://www.eschborn.de/leben-in-eschborn/gesellschaft-soziales-familie/mitbuerger-auslaendischer-herkunft">hier</a> <br><br>
     <span class ="ueberschrift1">Wohnen, Planen & Bauen</span>  <br>
     In den zwei Stadteilen Eschborn und Niederhöchstadt kann man Fachwerkhäuser und auch moderne Wohngebäude vorfinden. Auch im Gewerbegebiet Eschborn-Süd mit den modernen Büro- <br>gebäuden kann verfolgt werden,
     wie sich die Stadt im Laufe der letzten Jahre der architektonischen Entwicklung angepasst hast. Eschborn ist deshalb so beliebt, weil zuzüglich auch noch die <br> Nähe zum Taunus und zum Grünen im Generellen sie
-    so lebenswert macht. Daher wohnen viele Menschen und weitere zieht es nach Eschborn an.Bebauungspläne und Bodenrichtwerte der Stadt <br>Eschborn: Link zu den Bebauungsplänen findest du 
+    so lebenswert macht. Daher wohnen viele Menschen und weitere zieht es nach Eschborn an.<br><br>Bebauungspläne und Bodenrichtwerte der Stadt Eschborn:<br>Link zu den Bebauungsplänen findest du 
     <a href="https://www.eschborn.de/wirtschaft/publikationen-downloads/bebauungsplaene-bodenrichtwerte"> hier</a>  
     Bauprojekte:Regionaltangente West: Die RTW ist eine Regionalstadtbahn-Linie im S-Bahnnetz des Rhein-Main-Gebietes. Der Vorteil <br> des Vorhabens ist, dass tangentiale Verbindungen zwischen den Linien geschafft
-    werden. So entfällt das Umsteigen in Frankfurt und Reisezeiten werden verkürzt.Neubau Wiesenbad: Das <br>Schimmbad Eschborner wird um Indoor-Becken mit 50 m Länge erweitert. <br><br>
+    werden. So entfällt das Umsteigen in Frankfurt und Reisezeiten werden verkürzt.<br><br>Neubau Wiesenbad:<br>Das Schimmbad Eschborner wird um Indoor-Becken mit 50 m Länge erweitert. <br><br>
     <span class ="ueberschrift1">Umwelt & Klima</span>  <br>
     Das 2014 verabschiedete Integrierte kommunale Klimaschutzkonzept ist Grundlage einer klimafreundlicheren und nachhaltigeren wirtschaftlichen Entwicklung der Stadt und hat dazu <br> geführt, diese Ziele in den 
     Zuständigkeitsbereichen der Verwaltung festzuhalten. Damit dies auch umgesetzt wird, wurde die Position des Klimaschutzmanager geschaffen. <br><br>
     <span class ="ueberschrift1">Gesundheit</span>  <br> 
-    Du benötigst einen Arzt oder möchtest wissen, wo sich die Apotheken in eschborn befinden? Ein Arztverzeichnis ist<a href="https://www.gelbeseiten.de/branchen/arzt/eschborn%20taunus"> hier</a>
-    Die Eschborner Apotheken sind <a href="https://www.gelbeseiten.de/branchen/apotheke/eschborn%20taunus"> hier gelistet </a> 
-    . Das zuständige <br> Gesundheitsamt befindet sich in Hofheim.  Tel: 06192 201-0 Fax: 06192 201-1731 E-Mail: <a href= "mailto: gesundheitsamt@mtk.org">gesundheitsamt@mtk.org</a>
-    Weitere hilfreiche Adresse für deine Gesundheit sind hier hinterlegt: <br> <a href="https://www.gelbeseiten.de/branchen/physiotherapie/eschborn%20taunus"> Physiotherapien</a> 
-    <a href="https://www.gelbeseiten.de/branchen/krankenpflege/eschborn%20taunus"> Krankenpflege</a>  
-    <img src="./leben2.jpg" width=500px height=250px align="right">
+    Du benötigst einen Arzt oder möchtest wissen, wo sich die Apotheken in Eschborn befinden? Ein Arztverzeichnis ist <a href="https://www.gelbeseiten.de/branchen/arzt/eschborn%20taunus">hier</a>
+    Die Eschborner Apotheken sind <a href="https://www.gelbeseiten.de/branchen/apotheke/eschborn%20taunus"> hier gelistet</a>. Das zuständige Gesundheitsamt befindet sich in Hofheim. Tel: 06192 201-0 Fax: 06192 201-1731 E-Mail: <a href= "mailto: gesundheitsamt@mtk.org">gesundheitsamt@mtk.org</a><br>
+    Weitere hilfreiche Adresse für deine Gesundheit sind hier hinterlegt: <br> <a href="https://www.gelbeseiten.de/branchen/physiotherapie/eschborn%20taunus">Physiotherapien</a> 
+    <a href="https://www.gelbeseiten.de/branchen/krankenpflege/eschborn%20taunus">Krankenpflege</a>  
+    <img src="./leben2.jpg" width=500px height=250px style="border-left: 8px solid lightblue" align="right">
     
 </body>
 </html>
