--- a/Eschborn.html
+++ b/Eschborn.html
@@ -16,7 +16,7 @@
     Die offizielle Webseite mit Informationen rund um das Leben in Eschborn für Einheimische, Neubürger, Gäste und Gewerbetreibende.<br><br>
    <span class="ueberschrift">Aktuelle Themen</span><br>
     Veranstaltungen:<br>Konzerte, Theater, Lesungen - Alle Events im <a href="https://www.eschborn.de/stadt-kultur-und-tourismusinformationen/veranstaltungskalender">Veranstaltungskalender</a><br>
-    Infos zur Buntestagswahl 2025:<br>Voraussichtlicher Wahltermine am 23. Februar 2025. In Kürze erfahren Sie hier mehr.<br>Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
+    Infos zur Bundestagswahl 2025:<br>Voraussichtlicher Wahltermin am 23. Februar 2025. In Kürze erfahren Sie hier mehr.<br>Regionaltangente West: Neue Direktverbindungen werden geschafft und Eschborn
     ist dabei im Planfeststellungsabschnitt Nord.<br>Neubau Wiesenbad: Ein neues 50m langes Indoor-Schwimmbecken entsteht.<br><br>
     <hr>
     <span class="ueberschrift">Kontakt</span><br>
@@ -37,8 +37,8 @@
     <a href="Wirtschaft.html">
     <button style="color: black; height: 150px; width: 300px; font-size: x-large;">Wirtschaft</button></a></center>
     <hr>
-    <center><span class="ueberschrift">Quellen</span><br></center>
-    <center><a href="https://de.wikipedia.org/wiki/Regionaltangente_West">https://de.wikipedia.org/wiki/Regionaltangente_West</a> <br>
+    <center><span class="fussnoteUeberschrift">Quellen</span><br></center>
+    <center><div id="quellenDiv"><a href="https://de.wikipedia.org/wiki/Regionaltangente_West">https://de.wikipedia.org/wiki/Regionaltangente_West</a> <br>
      <a href="https://de.wikipedia.org/wiki/Eschborn">https://de.wikipedia.org/wiki/Eschborn</a> <br>
      <a href="https://www.giessen.de/">https://www.giessen.de/ </a><br>
      <a href="https://www.gelbeseiten.de">https://www.gelbeseiten.de</a> <br>
@@ -47,6 +47,6 @@
      <a href="https://www.youtube.com/watch?v=xkoHG8h4CyQ">https://www.youtube.com/watch?v=xkoHG8h4CyQ</a> <br>
      <a href="https://www.youtube.com/watch?v=_2wARy-oevQ&t=76s">https://www.youtube.com/watch?v=_2wARy-oevQ&t=76s</a>  <br>
      <a href="https://www.w3schools.com/css/css3_colors.asp#:~:text=Try%20it%20Yourself%20»-,Opacity,and%201.0%20(fully%20opaque)">https://www.w3schools.com/css/css3_colors.asp#:~:text=Try%20it%20Yourself%20»-,Opacity,and%201.0%20(fully%20opaque)</a> <br>
-     <a href="https://www.w3schools.com/howto/howto_css_style_hr.asp">https://www.w3schools.com/howto/howto_css_style_hr.asp</a> <br></span></center>
+     <a href="https://www.w3schools.com/howto/howto_css_style_hr.asp">https://www.w3schools.com/howto/howto_css_style_hr.asp</a> <br></div></center>
 </body>
 </html>
